fix on mobile box three height

--- a/style.css
+++ b/style.css
@@ -540,7 +540,7 @@ body {
 
 
   .box-three {
-    height: 1400px;
+    height: 1450px;
 
   }
 
